@@ -1,6 +1,10 @@
 ispCP ω 1.0.6 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2010-04-05 Laurent Declercq
+	- CONTRIB:
+		* Add new script to fix bad/missing EOL
+
 2010-04-11 Sascha Bay
 	- GUI:
 		* Fixed #2335: Add and existent user for assign to new db have issues
